# liquid-glass-plugin

./: .gitignore  CMakeLists.txt  LICENSE  LiquidGlassDecoration.cpp  LiquidGlassDecoration.hpp  LiquidGlassPassElement.cpp  LiquidGlassPassElement.hpp  embed_shaders.cmake  globals.hpp  logs.cpp  logs.hpp  main.cpp
shaders/: liquidGlass.frag  red.frag
